# web-text-crawler

./: .gitignore  LICENSE  README.md  pyproject.toml
crawling/: cli.py  config.py
crawling/crawler/: fetcher.py  link_extractor.py  robots.py  url_discovery.py
crawling/extractor/: text_extractor.py  tokenizer.py
crawling/search/: search_result.py  selenium_searcher.py
crawling/storage/: csv_writer.py
crawling/utils/: logger.py  url_normalizer.py
tests/: test_link_extractor.py  test_text_extractor.py  test_url_normalizer.py
tests/fixtures/: no_content.html  simple_page.html
